@@ -2,6 +2,8 @@
 
 	* lib/Pod/Thread.pm (cmd_item): Don't treat =item 0 as a bullet.
 	Also improve the coding style.
+	* t/basic.t: New file.  Add test suite framework and test the
+	=item 0 fix.
 
 2008-11-12  Russ Allbery  <rra@stanford.edu>
 
